# Truffle

./: .gitignore  CMakeLists.txt  README.md  behavior.h  bus.h  button.h  color.h  dispatcher.h  event.h  event_callback.h  event_publisher.h  exception.h  font.h  font_storage.h  fps.h  logger.h  main.cpp  message.h  non_copyable.h  object.h  object_tree.h  renderable.h  renderer.h  scene.h  scene_manager.h  singleton.h  stateful_object_manager.h  texture.h  window.h
common/: CMakeLists.txt  exception.h  logger.h  non_copyable.h  singleton.h  stateful_object_manager.h
controller/: CMakeLists.txt  fps.cpp  fps.h
engine/: CMakeLists.txt  actor.cpp  actor.h  actor_table.cpp  actor_table.h  bus.cpp  bus.h  context.cpp  context.h  controller.cpp  controller.h  dispatcher.cpp  dispatcher.h  engine.cpp  engine.h  engine_config.h  event.h  metrics.cpp  metrics.h  object.cpp  object.h  router.cpp  router.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
object/: CMakeLists.txt  button.cpp  button.h  image.cpp  image.h  text.cpp  text.h
wrapper/sdl2/: CMakeLists.txt  color.h  event.h  font.cpp  font.h  font_storage.cpp  font_storage.h  renderer.cpp  renderer.h  renderer_storage.cpp  renderer_storage.h  texture.cpp  texture.h  window.cpp  window.h
